# reviewer

./: .gitignore  CMakeLists.txt  reviewer_config.json  reviwer_config.json
book/ja/: hiragana.txt  katakana.txt
cppjson/: .gitignore  CMakeLists.txt
cppjson/main_project/include/: json_parser.h
cppjson/main_project/src/: CMakeLists.txt  json_parser.cpp  main.cpp  test_file.txt
include/: booklet.h
main_project/: CMakeLists.txt
main_project/include/: book.h  booklet.h  booklet_config.h  booklet_writer.h  file_writer.h  item.h  item_list.h  json_dict.h  json_parser.h  prompt.h  questioner.h  serializable.h  time_table.h  timestamp.h  token_id.h  writeable.h
main_project/src/: CMakeLists.txt  book.cpp  booklet.cpp  booklet_config.cpp  booklet_writer.cpp  item.cpp  item_list.cpp  json_dict.cpp  json_parser.cpp  main  main.cpp  prompt.cpp  questioner.cpp  reviewer_config.json  time_table.cpp
src/: booklet.cpp  main.cpp
